<resources>

    <string name="app_name">Alarmnator</string>

    <string name="tab1">alarm</string>
    <string name="tab2">location alarm</string>
    <string name="tab3">setting</string>

    <string name="am">AM</string>
    <string name="pm">PM</string>
    <string name="sun">SUN</string>
    <string name="mon">MON</string>
    <string name="tue">TUE</string>
    <string name="wed">WED</string>
    <string name="thu">THU</string>
    <string name="fri">FRI</string>
    <string name="sat">SAT</string>
    <string name="all_day">AllDay</string>
    <string name="weekday">Weekday</string>
    <string name="weekend">Weekend</string>

    <string name="alarm_name">Label</string>
    <string name="alarm_repeat">Repeat</string>
    <string name="alarm_sound">Sound</string>
    <string name="alarm_vibration">Vibration</string>

    <string name="button_save">Save</string>
    <string name="button_delete">Delete</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="textview_default_select">Default Set</string>

    <string name="repeat_title">Repeat Set</string>
    <string name="repeat_infinite">Repeat Infinite</string>
    <string name="gap">Gap</string>
    <string name="repeat">Repeat</string>

    <string name="km">km</string>

    <!--    vibration-->
    <string name="vibration_high">Hight</string>
    <string name="vibration_staccato">Staccato</string>
    <string name="vibration_heart">Heartbeat</string>
    <string name="vibration_symphony">Symphony</string>
    <string name="vibration_accent">Accent</string>
    <string name="vibration_basic">Default</string>
    <string name="vibration_quick">Quick</string>
    <string name="vibration_sos">S.O.S.</string>

    <!--    toast-->
    <string name="sound_not_set_message">There is no sound set.</string>

    <!--    description-->
    <string name="add_normal_alarm_description">This is a generic alarm button.</string>
    <string name="back_description">This is the back button.</string>
    <string name="save_description">This is the save button.</string>
    <string name="calendar_description">This is the date designation button.</string>

    <!--    default text-->
    <string name="top_default_time">AM 12:00</string>
    <string name="default_time_interval">AM12:00~PM12:00</string>
    <string name="default_time">6:00</string>
    <string name="default_km">1.0km</string>
    <string name="default_area">Goyang-si</string>

    <string name="main_option">This is the main setting.</string>
    <string name="textview_repeat_text">%1$sminute, %2$stimes</string>
    <string name="setting_complete">setting complete</string>
    <string name="setting_error">setting error\\nContact app administrator.</string>
</resources>