<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/constraint_alarm_item"
    android:layout_width="match_parent"
    android:layout_height="@dimen/alarm_item_height"
    android:padding="@dimen/margin_6">

    <TextView
        android:id="@+id/textview_distance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/txt_deactivate_1"
        android:text="@string/default_km"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/textview_area"/>

    <TextView
        android:id="@+id/textview_area"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_10"
        android:text="@string/default_area"
        android:textColor="@color/black"
        android:textSize="@dimen/location_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/textview_distance"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textview_time_interval"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_time_interval"
        android:layout_marginEnd="@dimen/margin_6"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@id/switch_item"
        app:layout_constraintBottom_toTopOf="@id/textview_week_wed"/>

    <TextView
        android:id="@+id/textview_week_sun"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sun"
        android:layout_marginEnd="@dimen/margin_4"
        app:layout_constraintTop_toBottomOf="@id/textview_time_interval"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/textview_week_mon"/>

    <TextView
        android:id="@+id/textview_week_mon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mon"
        android:layout_marginEnd="@dimen/margin_4"
        app:layout_constraintTop_toBottomOf="@id/textview_time_interval"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/textview_week_tue"/>

    <TextView
        android:id="@+id/textview_week_tue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tue"
        android:layout_marginEnd="@dimen/margin_4"
        app:layout_constraintTop_toBottomOf="@id/textview_time_interval"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/textview_week_wed"/>

    <TextView
        android:id="@+id/textview_week_wed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wed"
        android:layout_marginEnd="@dimen/margin_4"
        app:layout_constraintTop_toBottomOf="@id/textview_time_interval"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/textview_week_thu"/>

    <TextView
        android:id="@+id/textview_week_thu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/thu"
        android:layout_marginEnd="@dimen/margin_4"
        app:layout_constraintTop_toBottomOf="@id/textview_time_interval"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/textview_week_fri"/>

    <TextView
        android:id="@+id/textview_week_fri"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fri"
        android:layout_marginEnd="@dimen/margin_4"
        app:layout_constraintTop_toBottomOf="@id/textview_time_interval"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/textview_week_sat"/>

    <TextView
        android:id="@+id/textview_week_sat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sat"
        android:layout_marginEnd="@dimen/margin_6"
        app:layout_constraintTop_toBottomOf="@id/textview_time_interval"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/switch_item"/>

    <Switch
        android:id="@+id/switch_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>