<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraint_alarm_item"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:padding="6dp">

                <TextView
                    android:id="@+id/textview_distance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/txt_deactivate_1"
                    android:text="@string/default_km"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/textview_area"/>

                <TextView
                    android:id="@+id/textview_area"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/default_area"
                    android:textColor="@color/black"
                    android:textSize="14pt"
                    android:layout_marginStart="10dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/textview_distance"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textview_time_interval"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/default_time_interval"
                    android:layout_marginEnd="6dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/switch_item"
                    app:layout_constraintBottom_toTopOf="@id/textview_week_wed"/>

                <TextView
                    android:id="@+id/textview_week_sun"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sun"
                    android:layout_marginEnd="4dp"
                    app:layout_constraintTop_toBottomOf="@id/textview_time_interval"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/textview_week_mon"/>

                <TextView
                    android:id="@+id/textview_week_mon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mon"
                    android:layout_marginEnd="4dp"
                    app:layout_constraintTop_toBottomOf="@id/textview_time_interval"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/textview_week_tue"/>

                <TextView
                    android:id="@+id/textview_week_tue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tue"
                    android:layout_marginEnd="4dp"
                    app:layout_constraintTop_toBottomOf="@id/textview_time_interval"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/textview_week_wed"/>

                <TextView
                    android:id="@+id/textview_week_wed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wed"
                    android:layout_marginEnd="4dp"
                    app:layout_constraintTop_toBottomOf="@id/textview_time_interval"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/textview_week_thu"/>

                <TextView
                    android:id="@+id/textview_week_thu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/thu"
                    android:layout_marginEnd="4dp"
                    app:layout_constraintTop_toBottomOf="@id/textview_time_interval"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/textview_week_fri"/>

                <TextView
                    android:id="@+id/textview_week_fri"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fri"
                    android:layout_marginEnd="4dp"
                    app:layout_constraintTop_toBottomOf="@id/textview_time_interval"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/textview_week_sat"/>

                <TextView
                    android:id="@+id/textview_week_sat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sat"
                    android:layout_marginEnd="6dp"
                    app:layout_constraintTop_toBottomOf="@id/textview_time_interval"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/switch_item"/>

                <Switch
                    android:id="@+id/switch_item"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

    </ScrollView>

    <ImageButton
        android:id="@+id/imgbtn_location_alarm_add"
        android:layout_width="52dp"
        android:layout_height="52dp"
        android:scaleType="fitXY"
        android:src="@drawable/ic_add_location"
        android:background="@color/transparent"
        android:layout_gravity="bottom|right"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"/>

</FrameLayout>