<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="8dp">

    <TextView
        android:id="@+id/textview_repeat_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/repeat_title"
        android:textColor="@color/black"
        android:textSize="10pt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textview_gap_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gap"
        android:textSize="8pt"
        app:layout_constraintBottom_toTopOf="@id/button_repeat_cancel"
        app:layout_constraintEnd_toStartOf="@id/picker_gap_select"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textview_repeat_title" />

    <NumberPicker
        android:id="@+id/picker_gap_select"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:descendantFocusability="blocksDescendants"
        app:layout_constraintBottom_toTopOf="@id/button_repeat_cancel"
        app:layout_constraintEnd_toStartOf="@id/textview_repeat_text"
        app:layout_constraintStart_toEndOf="@id/textview_gap_text"
        app:layout_constraintTop_toBottomOf="@id/textview_repeat_title" />

    <TextView
        android:id="@+id/textview_repeat_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/repeat"
        android:textSize="8pt"
        app:layout_constraintBottom_toTopOf="@id/button_repeat_set"
        app:layout_constraintEnd_toStartOf="@id/picker_repeat_select"
        app:layout_constraintStart_toEndOf="@id/picker_gap_select"
        app:layout_constraintTop_toBottomOf="@id/textview_repeat_title"/>

    <NumberPicker
        android:id="@+id/picker_repeat_select"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:descendantFocusability="blocksDescendants"
        app:layout_constraintTop_toBottomOf="@id/textview_repeat_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/button_repeat_set"
        app:layout_constraintStart_toEndOf="@id/textview_repeat_text"/>

    <android.widget.Button
        android:id="@+id/button_repeat_cancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_delete_btn"
        android:foreground="?attr/selectableItemBackground"
        android:text="@string/cancel"
        android:textColor="@color/white"
        android:layout_margin="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/button_repeat_set"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/picker_gap_select" />

    <Button
        android:id="@+id/button_repeat_set"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_ok_btn"
        android:foreground="?attr/selectableItemBackground"
        android:text="@string/ok"
        android:layout_margin="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/button_repeat_cancel"
        app:layout_constraintTop_toBottomOf="@id/picker_repeat_select" />

</androidx.constraintlayout.widget.ConstraintLayout>