<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SetAlarmActivity">

    <LinearLayout
        android:id="@+id/actionBarLayout"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:orientation="horizontal"
        android:background="@color/main"
        android:gravity="center_vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

        </LinearLayout>

    </LinearLayout>

    <TimePicker
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:timePickerMode="spinner"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <ToggleButton
                    android:layout_margin="4dp"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:textOn="@string/sun"
                    android:textOff="@string/sun"
                    android:textSize="8pt"
                    android:textColor="#ff0000"
                    android:background="@drawable/weekend_selector"/>



                <ToggleButton
                    android:layout_margin="4dp"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:textOn="@string/mon"
                    android:textOff="@string/mon"
                    android:textSize="8pt"
                    android:background="@drawable/weekend_selector"/>

                <ToggleButton
                    android:layout_margin="4dp"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:textOn="@string/tue"
                    android:textOff="@string/tue"
                    android:textSize="8pt"
                    android:background="@drawable/weekend_selector"/>

                <ToggleButton
                    android:layout_margin="4dp"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:textOn="@string/wed"
                    android:textOff="@string/wed"
                    android:textSize="8pt"
                    android:background="@drawable/weekend_selector"/>

                <ToggleButton
                    android:layout_margin="4dp"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:textOn="@string/thu"
                    android:textOff="@string/thu"
                    android:textSize="8pt"
                    android:background="@drawable/weekend_selector"/>

                <ToggleButton
                    android:layout_margin="4dp"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:textOn="@string/fri"
                    android:textOff="@string/fri"
                    android:textSize="8pt"
                    android:background="@drawable/weekend_selector"/>

                <ToggleButton
                    android:layout_margin="4dp"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:textOn="@string/sat"
                    android:textOff="@string/sat"
                    android:textSize="8pt"
                    android:textColor="#0000ff"
                    android:background="@drawable/weekend_selector"/>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.3dp"
                android:background="@color/black"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/alarm_title"
                        android:textSize="10pt"
                        android:textColor="@color/black"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/default_sel"
                        android:textColor="@color/text_main"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:gravity="right|center_vertical">

                    <View
                        android:layout_width="0.3dp"
                        android:layout_height="match_parent"
                        android:background="@color/black"/>

                    <Switch
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/alarm_sound"
                        android:textSize="10pt"
                        android:textColor="@color/black"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/default_sel"
                        android:textColor="@color/text_main"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:gravity="right|center_vertical">

                    <View
                        android:layout_width="0.3dp"
                        android:layout_height="match_parent"
                        android:background="@color/black"/>

                    <Switch
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/alarm_vibration"
                        android:textSize="10pt"
                        android:textColor="@color/black"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/default_sel"
                        android:textColor="@color/text_main"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:gravity="right|center_vertical">

                    <View
                        android:layout_width="0.3dp"
                        android:layout_height="match_parent"
                        android:background="@color/black"/>

                    <Switch
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                </LinearLayout>

            </LinearLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/delete"
                android:background="@color/red"/>

        </LinearLayout>

    </ScrollView>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:text="클릭"
        android:id="@+id/createAlarmBtn"/>

</LinearLayout>